# beaglebone

./: CMakeLists.txt  README.md  base_local_planner_params.yaml  costmap_common_params.yaml  demconRobot.xacro  demcon_config.yaml  local_costmap_params.yaml  package.xml
include/: CanDriver.h  MotionSensorDriver.h  player_node.h
include/Beaglebone/: Control_Flow.h  Protocol_Controller_CAN.h  base_node.h
launch/: navigation.launch  robot.launch  robot.launch.bak  ui.launch
msg/: CurrentState.msg  Error.msg  IMU.msg  LRS.msg  ModuleState.msg  OperationState.msg  Position.msg  SetMode.msg  SpeedLR.msg  Velocity.msg  WheelDistances.msg  WheelVelocities.msg
src/: CAN_Driver.cpp  CAN_Driver.cpp~  CAN_Driver.h  CanDriver.cpp  Control_Flow.cpp  Control_Flow.cpp~  Control_Flow.h  Error_Handler.cpp  Inverse_Kinematics.cpp  Inverse_Kinematics.cpp~  LRS_Converter.cpp  LRS_Converter.cpp~  Module_Info.cpp  Module_Info.cpp~  MotionSensorDriver.cpp  Motion_Controller.cpp  Motion_Controller.cpp~  Motion_Planner.cpp  Motion_Planner.cpp~  Obstruction.cpp  Obstruction.cpp~  Protocol_Controller_CAN.cpp  Protocol_Controller_CAN.cpp~  Protocol_Controller_CAN.h  Protocol_Controller_CAN.h~  Sanity_Check.cpp  State_Estimation.cpp  State_Estimation.cpp~  State_Estimation_OLD.cpp  base_node.cpp  base_node.cpp~  base_node.h  demconrobot_MotionSensorDriver.cpp  demconrobot_player.cpp  player_node.cpp  receiver_can.cpp  ui.cpp
srv/: AppendError.srv  Command.srv  Init.srv  Mode.srv
