<?xml version="1.0"?>
<package>
	<name>beaglebone</name>
	<version>0.0.0</version>
	<description>Beaglebone ROS</description>


	<maintainer email="mark@todo.todo">mark</maintainer>
	<license>BSD</license>
	<url type="website">http://wiki.ros.org/beaglebone</url>


	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>boost</build_depend>
	<build_depend>message_runtime</build_depend>
	<build_depend>message_generation</build_depend>


	
	<run_depend>roscpp</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

</package>
